# optim-hunt

./: .code-outputs.json  .gitignore  README.md  content.html  content.md  content3.md  index.html  mdrp.bb  notes.html  notes.md  py_repl.clj  pyproject.toml  runpod.bb  serve.bb  setup.sh  site-gen.bb  template.html  test.py  test2.py  test3.py  train.py  tt.py
.cache/: content-block-1.edn  content-block-2.edn  content-block-3.edn  content-block-4.edn  content-block-5.edn  notes-block-1.edn  notes-block-2.edn  notes-block-3.edn  notes-block-4.edn  notes-block-5.edn
.zed/: tasks.json
docs/: index.html  notes.html
experiments/predictor_comparison_1/SGDGradientPredictor/: metrics.csv
notebooks/: llama3.1-linreg-logit-diff copy.ipynb  llama3.1-linreg-logit-diff-2.ipynb  llama3.1-linreg-logit-diff-3.ipynb  llama3.1-linreg-logit-diff.ipynb  llama3.1-linreg.ipynb  output_loss.ipynb  probs.ipynb
public/: index.html
src/g_structure/: __init__.py  logging_config.py  plot_html.py  pyproject.toml
src/optim_hunter/: LR_methods.py  data_model.py  datasets.py  llama_model.py  logging_config.py  model_utils.py  plot_html.py  plotly_utils.py  regressors.py  sklearn_regressors.py  utils.py
src/optim_hunter/experiments/: attention.py  claude_wanted_to_try_this.py  logit_diff.py  mlp.py  optim_probe.py  p.py  probe.py  prompt_stack.py  regressors_comparison.py  train_probes.py
src/optim_hunter/probe/: mlp_probe.py  probe_prediction.py  regression_predictors.py
