[project]
name = "optim-hunter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "transformer-lens>=2.10.0",
    "einops>=0.8.0",
    "jaxtyping>=0.2.36",
    "circuitsvis",
    "jupyter>=1.1.1",
    "neel-plotly",
    "plotly>=5.24.1",
    "scikit-learn>=1.6.0",
    "sentencepiece>=0.2.0",
    "torch==2.2.2",
    "ipykernel>=6.29.5",
    "ipychart>=0.5.2",
    "matplotlib>=3.10.0",
    "ruff>=0.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
circuitsvis = { git = "https://github.com/callummcdougall/CircuitsVis.git", subdirectory = "python" }
neel-plotly = { git = "https://github.com/neelnanda-io/neel-plotly" }

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = [
    "E501", # line-too-long
    "D"   # pydocstyle
]
